# coral

./: .busted  .clang-format  .gitignore  .travis.yml  .travis_setup.sh  CMakeLists.txt  LICENSE  README.md  coral-dev-1.rockspec
cmake/: FindCoral.cmake
modules/co/: ArrayType.csl  CSLError.csl  Component.csl  CppBlockAnnotation.csl  DocumentationAnnotation.csl  Enum.csl  ExceptionType.csl  Field.csl  IAnnotated.csl  IAnnotation.csl  IArray.csl  IClassType.csl  IComponent.csl  ICompositeType.csl  ICppBlock.csl  IDocumentation.csl  IDynamicServiceProvider.csl  IDynamicTypeProvider.csl  IEnum.csl  IException.csl  IField.csl  IInclude.csl  IInterface.csl  IMember.csl  IMethod.csl  IMethodBuilder.csl  IModule.csl  IModuleManager.csl  IModulePart.csl  IModulePartLoader.csl  INamespace.csl  INativeClass.csl  IObject.csl  IParameter.csl  IPort.csl  IRecordType.csl  IReflector.csl  IService.csl  IServiceManager.csl  IStruct.csl  (+38 more)
modules/co/compiler/: Compile.lua  TypeWrapper.lua  __init.lua  json.lua  path.lua  pretty.lua
modules/lua/: IInterceptor.csl  IState.csl  __init.lua  pretty.lua
src/: CMakeLists.txt
src/co/: Any.cpp  Any.h  CMakeLists.txt  Config.h.in  Coral.cpp  Exception.cpp  IService.h  Log.cpp  Log.h  Platform.h  ServiceManager.cpp  Slice.h  System.cpp  System.h  TypeKind.h  TypeTraits.cpp
src/co/modules/: Library.h  Module.cpp  ModuleManager.cpp  ModulePartLoader.cpp  ModulePartLoader.h
src/co/private/: ComponentBase.h  LexicalUtils.cpp  LexicalUtils.h  LibraryManager.cpp  LibraryManager.h  ModulePartBase.h  OS.cpp  OS.h  Properties.cpp  Properties.h  README.md  RefCounted.cpp  RefCounted.h  ReflectorBase.cpp  ReflectorBase.h  StringTokenizer.h
src/co/types/: BasicReflector.cpp  BasicReflector.h  MethodBuilder.cpp  Namespace.cpp  SHA1.cpp  SHA1.h  SignatureCalculator.cpp  SignatureCalculator.h  TypeBuilder.cpp  TypeBuilder.h  TypeLoader.cpp  TypeManager.cpp  TypeManager.h  TypeTransaction.cpp  TypeTransaction.h
src/co/types/csl/: CSL.y  Error.cpp  Error.h  Loader.cpp  Loader.h  README.md  location.hh  parser.hh  position.hh  scanner.hh  stack.hh
src/co/types/descriptors/: Enum.h  Interface.cpp  Member.h  NativeClass.cpp  Parameter.cpp  Port.h  Struct.cpp  Struct.h  Type.cpp  Type.h
src/core/: Any.cpp  Any.h  CMakeLists.txt  Common.h  Config.h.in  Coral.cpp  Coral.h  Endian.h  Exception.h  Platform.h  RefPtr.h  ServiceManager.h  Slice.h  System.cpp  System.h  TypeKind.h  TypeTraits.cpp  TypeTraits.h
src/core/modules/: Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h  ModulePartLoader.cpp
src/core/reserved/: ComponentBase.cpp  ComponentBase.h  LexicalUtils.cpp  LexicalUtils.h  LibraryManager.cpp  LibraryManager.h  ModulePartBase.cpp  ModulePartBase.h  OS.cpp  OS.h  RefCounted.h  ReflectorBase.h  Uuid.cpp  Uuid.h
src/core/types/: BasicReflector.cpp  (+12 more)
src/lua/: CMakeLists.txt  LuaBinding.cpp  LuaBinding.h  LuaComponent.cpp  LuaComponent.h  LuaLauncher.cpp  LuaModulePart.cpp  LuaModulePartLoader.cpp  LuaState.cpp  LuaState.h  ModulePart.cpp  ScriptedAnnotation.cpp
src/lua/libs/: CMakeLists.txt  README.md
src/tools/: CMakeLists.txt  Utils.h  coral.cpp  coralc.cpp
tests/: CMakeLists.txt  valgrind.supp
tests/core/: AnnotationTests.cpp  AnyTests.cpp  AnyValueTests.cpp  ArrayTests.cpp  CMakeLists.txt  CSLTester.cpp  CSLTester.h  ComponentTests.cpp  CryptoHashTests.cpp  EnumTests.cpp  ExceptionTests.cpp  InterfaceTests.cpp  LexicalUtilsTests.cpp  LibraryTests.cpp  LogTests.cpp  MethodBuilderTests.cpp  NamespaceTests.cpp  NativeClassTests.cpp  OSTests.cpp  ObjectTests.cpp  PlatformTests.cpp  PropertiesTests.cpp  PseudoService.h  RefPtrTests.cpp  ReflectorTests.cpp  ServiceManagerTests.cpp  SignatureCalculatorTests.cpp  SliceTests.cpp  StringTokenizerTests.cpp  StructTests.cpp  SystemTests.cpp  TestHelper.cpp  TestHelper.h  ToolsTests.cpp  TypeBuilderTests.cpp  TypeLoaderTests.cpp  TypeManagerTests.cpp  TypeTraitsTests.cpp  TypeTransactionTests.cpp  UuidTests.cpp
tests/core/data/csl/Global/: Date.csl
tests/core/data/csl/Graphics/: Size.csl
tests/core/data/csl/InterfaceTests/ValidDeclarations/: validInterface.csl
tests/core/data/csl/StructTests/: struct_methods.csl
tests/lua/: CMakeLists.txt  LuaTests.cpp  Main.cpp
tests/lua/modules/lua/: interceptor.lua
tests/lua/modules/lua/array/: lua.array.lua
tests/lua/modules/lua/assertEq/: lua.assertEq.lua
tests/lua/modules/lua/assertErrorMismatch/: lua.assertErrorMismatch.lua
tests/lua/modules/lua/assertErrorNoError/: lua.assertErrorNoError.lua
tests/lua/modules/lua/assertTrue/: lua.assertTrue.lua
tests/lua/modules/lua/coPackage/: lua.coPackage.lua
tests/lua/modules/lua/component/: lua.component.lua
tests/lua/modules/lua/componentManipulation/: lua.componentManipulation.lua
tests/lua/modules/lua/inOutParams/: lua.inOutParams.lua
tests/lua/modules/lua/interfaceFields/: lua.interfaceFields.lua
tests/lua/modules/lua/interfaceMethods/: lua.interfaceMethods.lua
tests/lua/modules/lua/log/: lua.log.lua
tests/lua/modules/lua/moduleInvalidReturn/: lua.moduleInvalidReturn.lua
tests/lua/modules/lua/moduleInvalidScriptName/: moduleInvalidScriptName.lua
tests/lua/modules/lua/moduleValid/: lua.moduleValid.lua
tests/lua/modules/lua/nativeClass/: lua.nativeClass.lua
tests/lua/modules/lua/scripts/: manyFunctions.lua
tests/lua/modules/lua/services/: lua.services.lua
tests/lua/modules/lua/struct/: lua.struct.lua
tests/moduleA/: AnnotationTests.cpp  CMakeLists.txt  FaultyAnnotation.cpp  File_Adapter.cpp  Main.cpp  MappingTests.cpp  ReflectionTests.cpp  TestAnnotation.cpp  TestComponent.cpp  Vec2D_Adapter.cpp
tests/moduleA/moduleA/: BadlySortedStruct.csl  File.csl  ITestAnnotation.csl  InOutTests.csl  TestInterface.csl  TestStruct.csl
tests/moduleA/moduleA/Continent/Country/: China.csl  Taiwan.csl
tests/moduleA/moduleA/tests/: AnnotationData.csl
tests/moduleB/: CMakeLists.txt  ModulePart.cpp  ModuleTests.cpp
tests/performance/: CMakeLists.txt  Main.cpp  PerformanceTests.cpp  PerformanceTests.lua
tests/regen/: CMakeLists.txt  Main.cpp
tests/spec/: parser_spec.lua
(+66 files in other folders)
